--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,28 @@
+aiosqlite==0.18.0
+alembic==1.10.2
+anyio==3.6.2
+apprise==1.3.0
 apturl==0.5.2
+asgi-lifespan==2.0.0
+asyncpg==0.27.0
 attrs==21.2.0
 bcrypt==3.2.0
 blinker==1.4
 Brlapi==0.8.3
+cachetools==5.3.0
 certifi==2020.6.20
+cffi==1.15.1
 chardet==4.0.0
 click==8.0.3
+cloudpickle==2.2.1
 colorama==0.4.4
 command-not-found==0.3
-cryptography==3.4.8
+conf==0.4.1
+coolname==2.2.0
+croniter==1.3.8
+cryptography==39.0.2
 cupshelpers==1.0
+dateparser==1.1.8
 dbus-python==1.2.18
 defer==1.0.6
 distlib==0.3.6
@@ -20,15 +33,30 @@ docker-compose==1.29.2
 dockerpty==0.4.1
 docopt==0.6.2
 duplicity==0.8.21
+fastapi==0.95.0
 fasteners==0.14.1
 filelock==3.10.0
+fsspec==2023.1.0
 future==0.18.2
+google-auth==2.16.2
+greenlet==2.0.2
+griffe==0.25.5
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.16.3
 httplib2==0.20.2
+httpx==0.23.3
+hyperframe==6.0.1
 idna==3.3
 importlib-metadata==4.6.4
 jeepney==0.7.1
+Jinja2==3.1.2
+jsonpatch==1.32
+jsonpointer==2.3
 jsonschema==3.2.0
 keyring==23.5.0
+kubernetes==26.1.0
 language-selector==0.1
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
@@ -37,22 +65,35 @@ lockfile==0.12.2
 louis==3.20.0
 macaroonbakery==1.3.1
 Mako==1.1.3
+Markdown==3.4.3
+markdown-it-py==2.2.0
 MarkupSafe==2.0.1
+mdurl==0.1.2
 monotonic==1.6
 more-itertools==8.10.0
 netifaces==0.11.0
 numpy==1.24.2
 oauthlib==3.2.0
 olefile==0.46
+orjson==3.8.8
+packaging==23.0
 pandas==1.5.3
 paramiko==2.9.3
+pathspec==0.11.1
+pendulum==2.1.2
 pexpect==4.8.0
 Pillow==9.0.1
 platformdirs==3.1.1
+prefect==2.8.6
 protobuf==3.12.4
 ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycairo==1.20.1
+pycparser==2.21
 pycups==2.0.1
+pydantic==1.10.7
+Pygments==2.14.0
 PyGObject==3.42.1
 PyJWT==2.3.0
 pymacaroons==0.13.0
@@ -64,24 +105,45 @@ python-apt==2.4.0+ubuntu1
 python-dateutil==2.8.1
 python-debian===0.1.43ubuntu1
 python-dotenv==0.19.2
+python-slugify==8.0.1
+python-utils==3.5.2
 pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+pytzdata==2020.1
 pyxdg==0.27
 PyYAML==5.4.1
+readchar==4.0.5
+regex==2023.3.22
 reportlab==3.6.8
 requests==2.25.1
+requests-oauthlib==1.3.1
+rfc3986==1.5.0
+rich==13.3.2
+rsa==4.9
 SecretStorage==3.3.1
 six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==1.4.47
+starlette==0.26.1
 systemd-python==234
+text-unidecode==1.3
 texttable==1.6.4
+toml==0.10.2
+typer==0.7.0
+typing_extensions==4.5.0
+tzdata==2022.7
+tzlocal==4.3
 ubuntu-advantage-tools==8001
 ubuntu-drivers-common==0.0.0
 ufw==0.36.1
 unattended-upgrades==0.1
 urllib3==1.26.5
 usb-creator==0.3.7
+uvicorn==0.21.1
 virtualenv==20.21.0
 wadllib==1.3.6
 websocket-client==1.2.3
+websockets==10.4
 xdg==5
 xkit==0.0.0
 zipp==1.0.0
