--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ asyncpg==0.27.0
 attrs==21.2.0
 bcrypt==3.2.0
 blinker==1.4
+boto3==1.26.98
+botocore==1.29.98
 Brlapi==0.8.3
 cachetools==5.3.0
 certifi==2020.6.20
@@ -52,6 +54,7 @@ idna==3.3
 importlib-metadata==4.6.4
 jeepney==0.7.1
 Jinja2==3.1.2
+jmespath==1.0.1
 jsonpatch==1.32
 jsonpointer==2.3
 jsonschema==3.2.0
@@ -120,6 +123,7 @@ requests-oauthlib==1.3.1
 rfc3986==1.5.0
 rich==13.3.2
 rsa==4.9
+s3transfer==0.6.0
 SecretStorage==3.3.1
 six==1.16.0
 sniffio==1.3.0
