--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ Markdown==3.4.2
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 mdurl==0.1.2
+minio==7.1.14
 oauthlib==3.2.2
 orjson==3.8.8
 packaging==23.0
